@@ -4,6 +4,7 @@ Version 0.3     -
   - New date converter to format dates in a localized format
   - New components <util:escape>, <util:script>, <util:flush>
   - Provide pre-defined beans in ASF contexts: param, header
+  - Add support for dialog boxes with jQuery UI
 
 Version 0.2     - Sep 2011
   - Integrate jQuery UI 1.8.3 (MIT-License)
